fix: layout overflow

--- a/style/admin.css
+++ b/style/admin.css
@@ -11,7 +11,7 @@ div.admin {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: auto 4rem;
+  margin: auto 2rem;
   height: 70vh;
   color: white;
   background-color: var(--background-color);
