--- a/style/style.css
+++ b/style/style.css
@@ -186,6 +186,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   height: 90vh;
   min-width: 1060px;
   flex-grow: 1;
